--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "accelerate>=1.10.0",
     "fastapi[standard]>=0.116.1",
+    "pydantic-settings>=2.10.1",
     "python-dotenv>=1.1.1",
     "torch>=2.8.0",
     "transformers>=4.55.2",
